# claim-memory-graph-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: dev-guide.md  release.md  user-guide.md
examples/: deepeval_metric.py  deepseek_mt_bench_smoke.py  inspect_ai_scorer.py  local_judge_demo.py  openai_judge_demo.py
src/cmg/: __init__.py  _schema.py  checks.py  cli.py  errors.py  graph.py  integration.py  judge.py  nodes.py  parser.py  report.py  sync.py
src/cmg/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/cmg/storage/: __init__.py  jsonl.py  protocol.py
tests/: test_checks.py  test_cli.py  test_graph.py  test_integration.py  test_judge.py  test_nodes.py  test_parser.py  test_providers.py  test_storage.py  test_sync.py
