[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claim-memory-graph"
version = "0.1.1"
description = "Claim Memory Graph: a lightweight audit layer for inspectable LLM-as-a-judge decisions."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Matteo Leonesi" }]
keywords = ["llm", "memory", "observability", "audit", "llm-as-judge", "evaluation", "rubrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
cmg-view = "cmg.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "mypy>=1.10",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/MatteoLeonesi/claim-memory-graph-sdk"
Documentation = "https://github.com/MatteoLeonesi/claim-memory-graph-sdk#readme"
Source = "https://github.com/MatteoLeonesi/claim-memory-graph-sdk"
Issues = "https://github.com/MatteoLeonesi/claim-memory-graph-sdk/issues"
Changelog = "https://github.com/MatteoLeonesi/claim-memory-graph-sdk/releases"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cmg"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/cmg"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
